--- a/Halloapp/pt.lproj/Localizable.strings
+++ b/Halloapp/pt.lproj/Localizable.strings
@@ -148,6 +148,9 @@
 /* Title for call history event. Appears next to details of a missed call. */
 "call.history.voice.call.missed" = "Chamada de voz perdida";
 
+/* Status displayed when the other side is busy. */
+"call.status.busy" = "em outra chamada";
+
 /* Status displayed when outgoing call starts */
 "call.status.calling" = "ligando...";
 
@@ -349,6 +352,12 @@
 /* Text displayed in gray inside of the comment input field when there is no user input. */
 "comment.textfield.placeholder" = "Fazer um comentário";
 
+/* Header that appears above all the unread comments in the comments view when there are more than one unread message */
+"comment.unread.messages.header.plural" = "%@ Comentários não lidos";
+
+/* Header that appears above one single unread message in the comments view. */
+"comment.unread.messages.header.single" = "%@ Comentário não lido";
+
 /* Text displayed in place of a comment that is not supported in the current app version. */
 "comment.unsupported" = "A sua versão do HalloApp não suporta este tipo de comentário.";
 
@@ -435,9 +444,6 @@
 
 /* The default name given to new groups when the user is in Zero Zone (no contacts) */
 "create.group.default.name.my.new.group" = "Meu novo grupo";
-
-/* Text label for group description text box */
-"create.group.description.label" = "Descrição";
 
 /* Placeholder text shown inside the group description input box when it's empty */
 "create.group.description.placeholder" = "Adicione uma descrição (opcional)";
@@ -705,6 +711,12 @@
 
 /* Title of group invite screen */
 "group.invite.title" = "Convite de grupo";
+
+/* Title of invite sheet */
+"group.invitesheet.title" = "Partilhe este link com amigos e familiares e eles se juntarão automaticamente ao HalloApp";
+
+/* Section header describing options to share link */
+"group.invitesheet.use.link.via" = "Compartilhar link usando…";
 
 /* Label shown above group members list */
 "group.members.label" = "Membros";
@@ -987,6 +999,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 vídeo";
+
+/* Missed voice call notification text to be shown to the user. */
+"notification.voicecall.missed" = "Chamada de voz perdida";
 
 /* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 Mensagem de voz";
@@ -1447,8 +1462,8 @@
 /* Row in Settings screen */
 "title.privacy" = "Privacidade";
 
-/* Title of screen where user chooses members to add to either a new group or an existing one */
-"title.select.group.members.create.group" = "Criar um novo grupo";
+/* Title of screen where user can add members during group creation flow */
+"title.select.group.members.create.title" = "Adicionar membros";
 
 /* Title of screen where user chooses members to add to either a new group or an existing one */
 "title.select.group.members.title" = "Adicionar novos membros";
