--- a/Notification Service Extension/fa.lproj/Localizable.strings
+++ b/Notification Service Extension/fa.lproj/Localizable.strings
@@ -142,6 +142,9 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "ویدیو 📹";
 
+/* Missed voice call notification text to be shown to the user. */
+"notification.voicecall.missed" = "☎️ تماس صوتی از دست رفته";
+
 /* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 پیام صوتی";
 
