--- a/Notification Service Extension/pt.lproj/Localizable.strings
+++ b/Notification Service Extension/pt.lproj/Localizable.strings
@@ -142,6 +142,9 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 vídeo";
 
+/* Missed voice call notification text to be shown to the user. */
+"notification.voicecall.missed" = "Chamada de voz perdida";
+
 /* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 Mensagem de voz";
 
