--- a/Notification Service Extension/ru.lproj/Localizable.strings
+++ b/Notification Service Extension/ru.lproj/Localizable.strings
@@ -142,6 +142,9 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 видео";
 
+/* Missed voice call notification text to be shown to the user. */
+"notification.voicecall.missed" = "Пропущенный голосовой вызов";
+
 /* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 Голосовая заметка";
 
