--- a/Share Extension/nl.lproj/Localizable.strings
+++ b/Share Extension/nl.lproj/Localizable.strings
@@ -146,6 +146,9 @@
    Alert title when a direct to group sharing is missing */
 "share.destination.missing.group" = "Groep %@ ontbreekt";
 
+/* Show more groups in the share group selection */
+"share.destination.more" = "Laat meer zien...";
+
 /* Share on the home feed selection cell */
 "share.destination.new" = "Nieuwe Post";
 
