--- a/Share Extension/ru.lproj/Localizable.strings
+++ b/Share Extension/ru.lproj/Localizable.strings
@@ -146,6 +146,9 @@
    Alert title when a direct to group sharing is missing */
 "share.destination.missing.group" = "Отсутствует группа %@";
 
+/* Show more groups in the share group selection */
+"share.destination.more" = "Показать больше...";
+
 /* Share on the home feed selection cell */
 "share.destination.new" = "Новый пост";
 
