--- a/Share Extension/fa.lproj/Localizable.strings
+++ b/Share Extension/fa.lproj/Localizable.strings
@@ -146,6 +146,9 @@
    Alert title when a direct to group sharing is missing */
 "share.destination.missing.group" = "گروه %@ یافت نشد";
 
+/* Show more groups in the share group selection */
+"share.destination.more" = "نمایش بیشتر...";
+
 /* Share on the home feed selection cell */
 "share.destination.new" = "پست جدید";
 
